manseCalendar/management/commands/util/myFileGrammarParser.py
# Generated from myFileGrammar.g4 by ANTLR 4.6
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO



class myFileGrammarParser ( Parser ):

    grammarFileName = "myFileGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'\t'", u"'양력'", u"'음력'", u"'('", u"')'", 
                     u"'년'", u"'월'", u"'일'", u"'평달'", u"'윤달'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"DIGIT", 
                      u"WS" ]

    RULE_line = 0
    RULE_solarDate = 1
    RULE_lunarDate = 2
    RULE_date = 3
    RULE_monthKind = 4
    RULE_year = 5
    RULE_month = 6
    RULE_day = 7

    ruleNames =  [ u"line", u"solarDate", u"lunarDate", u"date", u"monthKind", 
                   u"year", u"month", u"day" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    DIGIT=11
    WS=12

    def __init__(self, input):
        super(myFileGrammarParser, self).__init__(input)
        self.checkVersion("4.6")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class LineContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(myFileGrammarParser.LineContext, self).__init__(parent, invokingState)
            self.parser = parser

        def solarDate(self):
            return self.getTypedRuleContext(myFileGrammarParser.SolarDateContext,0)


        def lunarDate(self):
            return self.getTypedRuleContext(myFileGrammarParser.LunarDateContext,0)


        def getRuleIndex(self):
            return myFileGrammarParser.RULE_line

        def enterRule(self, listener):
            if hasattr(listener, "enterLine"):
                listener.enterLine(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitLine"):
                listener.exitLine(self)




    def line(self):

        localctx = myFileGrammarParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_line)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 16
            self.solarDate()
            self.state = 17
            self.match(myFileGrammarParser.T__0)
            self.state = 18
            self.lunarDate()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SolarDateContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(myFileGrammarParser.SolarDateContext, self).__init__(parent, invokingState)
            self.parser = parser

        def date(self):
            return self.getTypedRuleContext(myFileGrammarParser.DateContext,0)


        def getRuleIndex(self):
            return myFileGrammarParser.RULE_solarDate

        def enterRule(self, listener):
            if hasattr(listener, "enterSolarDate"):
                listener.enterSolarDate(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitSolarDate"):
                listener.exitSolarDate(self)




    def solarDate(self):

        localctx = myFileGrammarParser.SolarDateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_solarDate)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 20
            self.match(myFileGrammarParser.T__1)
            self.state = 21
            self.date()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LunarDateContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(myFileGrammarParser.LunarDateContext, self).__init__(parent, invokingState)
            self.parser = parser

        def date(self):
            return self.getTypedRuleContext(myFileGrammarParser.DateContext,0)


        def monthKind(self):
            return self.getTypedRuleContext(myFileGrammarParser.MonthKindContext,0)


        def getRuleIndex(self):
            return myFileGrammarParser.RULE_lunarDate

        def enterRule(self, listener):
            if hasattr(listener, "enterLunarDate"):
                listener.enterLunarDate(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitLunarDate"):
                listener.exitLunarDate(self)




    def lunarDate(self):

        localctx = myFileGrammarParser.LunarDateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_lunarDate)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 23
            self.match(myFileGrammarParser.T__2)
            self.state = 24
            self.date()
            self.state = 25
            self.match(myFileGrammarParser.T__3)
            self.state = 26
            self.monthKind()
            self.state = 27
            self.match(myFileGrammarParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DateContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(myFileGrammarParser.DateContext, self).__init__(parent, invokingState)
            self.parser = parser

        def year(self):
            return self.getTypedRuleContext(myFileGrammarParser.YearContext,0)


        def month(self):
            return self.getTypedRuleContext(myFileGrammarParser.MonthContext,0)


        def day(self):
            return self.getTypedRuleContext(myFileGrammarParser.DayContext,0)


        def getRuleIndex(self):
            return myFileGrammarParser.RULE_date

        def enterRule(self, listener):
            if hasattr(listener, "enterDate"):
                listener.enterDate(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitDate"):
                listener.exitDate(self)




    def date(self):

        localctx = myFileGrammarParser.DateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_date)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29
            self.year()
            self.state = 30
            self.match(myFileGrammarParser.T__5)
            self.state = 31
            self.month()
            self.state = 32
            self.match(myFileGrammarParser.T__6)
            self.state = 33
            self.day()
            self.state = 34
            self.match(myFileGrammarParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MonthKindContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(myFileGrammarParser.MonthKindContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return myFileGrammarParser.RULE_monthKind

        def enterRule(self, listener):
            if hasattr(listener, "enterMonthKind"):
                listener.enterMonthKind(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitMonthKind"):
                listener.exitMonthKind(self)




    def monthKind(self):

        localctx = myFileGrammarParser.MonthKindContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_monthKind)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            _la = self._input.LA(1)
            if not(_la==myFileGrammarParser.T__8 or _la==myFileGrammarParser.T__9):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class YearContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(myFileGrammarParser.YearContext, self).__init__(parent, invokingState)
            self.parser = parser

        def DIGIT(self, i=None):
            if i is None:
                return self.getTokens(myFileGrammarParser.DIGIT)
            else:
                return self.getToken(myFileGrammarParser.DIGIT, i)

        def getRuleIndex(self):
            return myFileGrammarParser.RULE_year

        def enterRule(self, listener):
            if hasattr(listener, "enterYear"):
                listener.enterYear(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitYear"):
                listener.exitYear(self)




    def year(self):

        localctx = myFileGrammarParser.YearContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_year)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==myFileGrammarParser.DIGIT:
                self.state = 38
                self.match(myFileGrammarParser.DIGIT)
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MonthContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(myFileGrammarParser.MonthContext, self).__init__(parent, invokingState)
            self.parser = parser

        def DIGIT(self, i=None):
            if i is None:
                return self.getTokens(myFileGrammarParser.DIGIT)
            else:
                return self.getToken(myFileGrammarParser.DIGIT, i)

        def getRuleIndex(self):
            return myFileGrammarParser.RULE_month

        def enterRule(self, listener):
            if hasattr(listener, "enterMonth"):
                listener.enterMonth(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitMonth"):
                listener.exitMonth(self)




    def month(self):

        localctx = myFileGrammarParser.MonthContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_month)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==myFileGrammarParser.DIGIT:
                self.state = 44
                self.match(myFileGrammarParser.DIGIT)
                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DayContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(myFileGrammarParser.DayContext, self).__init__(parent, invokingState)
            self.parser = parser

        def DIGIT(self, i=None):
            if i is None:
                return self.getTokens(myFileGrammarParser.DIGIT)
            else:
                return self.getToken(myFileGrammarParser.DIGIT, i)

        def getRuleIndex(self):
            return myFileGrammarParser.RULE_day

        def enterRule(self, listener):
            if hasattr(listener, "enterDay"):
                listener.enterDay(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitDay"):
                listener.exitDay(self)




    def day(self):

        localctx = myFileGrammarParser.DayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_day)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==myFileGrammarParser.DIGIT:
                self.state = 50
                self.match(myFileGrammarParser.DIGIT)
                self.state = 55
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





